fix scrollbar

--- a/style/media.css
+++ b/style/media.css
@@ -1,3 +1,8 @@
+@media screen and (min-width: 1812px) {
+  #section-two-cards{
+    overflow-x: hidden;
+  }
+}
 @media screen and (max-width: 1090px) {
     .contact-img {
       display: flex;
